# EEG-Baseline

./: .gitignore  README.md  pyproject.toml
cnn_transformer/: dataset.py  eval.py  model.py  train.py
configs/cnn_transformer/: hmc.yaml  tusz.yaml
configs/eegnet/: hmc.yaml  tusz.yaml
configs/gram/: hmc.yaml  tusz.yaml
configs/labram/: hmc.yaml  tusz.yaml
eeg_baseline/: api.py  cli.py
eeg_baseline/datasets/: base_dataset.py  builder.py
eeg_baseline/models/: base_model.py  builder.py
eeg_baseline/models/cnn_transformer/: model.py
eeg_baseline/models/eegnet/: model.py
eeg_baseline/models/gram/: model.py
eeg_baseline/models/gram/original/: decoder.py  encoder.py  helper.py  modeling_Gram.py  modeling_Gram_finetune.py  modeling_vqkd.py  transformer.py
eeg_baseline/models/labram/: model.py
eeg_baseline/models/labram/original/: modeling_vqnsp.py
eeg_baseline/pipelines/: eval_pipeline.py  train_pipeline.py
eeg_baseline/utils/: config_parser.py  logger.py  metrices.py
eegnet/: eval.py  model.py  train.py
labram/: convert_dataset.py  finetune.sh  plot.py  run_class_finetuning.py  utils.py
